Fix flickering weird background on initial load

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,6 +1,8 @@
 :local(.App) {
   display: flex;
   flex-direction: column;
+  background: linear-gradient(170deg, var(--yellow) 95%, var(--teal) 5%);
+  padding: 2rem;
 }
 
 @media only screen and (min-width: 920px) {
